echo-swagger 통한 API 문서 자동화 작업중 (enums 검색 조건 추가 및 Description 추가)
