# app/docs/swagger.json
@@ -61,17 +61,37 @@
                 ],
                 "responses": {
                     "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/login/logout": {
+            "post": {
+                "description": "Logout",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Login"
+                ],
+                "summary": "Logout",
+                "responses": {
+                    "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/define.BsmgMemberResponse"
+                            "$ref": "#/definitions/define.OnlyResult"
                         }
                     }
                 }
             }
         },
-        "/reportList": {
+        "/report/reportList": {
             "get": {
-                "description": "Get Daily Report List des",
+                "description": "combo means 0:all, 1:title, 2:content, 3:reporter",
                 "consumes": [
                     "application/json"
                 ],
@@ -85,21 +105,19 @@
                 "parameters": [
                     {
                         "enum": [
-                            "All",
-                            "Title",
-                            "Content",
-                            "Reporter"
+                            0,
+                            1,
+                            2,
+                            3
                         ],
-                        "type": "string",
-                        "description": "Search Condition enums",
-                        "name": "search_combo",
-                        "in": "query",
-                        "required": true
+                        "type": "integer",
+                        "description": "* 0 - All\n* 1 - Title",
+                        "name": "@d1#search_combo",
+                        "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Search Input",
-                        "name": "search_input",
+                        "name": "@d1#search_input",
                         "in": "query"
                     },
                     {
@@ -160,7 +178,12 @@
                     "type": "object",
                     "properties": {
                         "dm_memberInfo": {
-                            "$ref": "#/definitions/define.BsmgMemberInfo"
+                            "description": "Mem_id , Mem_PW is required",
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/define.BsmgMemberInfo"
+                                }
+                            ]
                         }
                     }
                 }
@@ -246,6 +269,14 @@
                 },
                 "totalCount": {
                     "$ref": "#/definitions/define.TotalCountData"
+                }
+            }
+        },
+        "define.OnlyResult": {
+            "type": "object",
+            "properties": {
+                "Result": {
+                    "$ref": "#/definitions/define.Result"
                 }
             }
         },
